# gobed

./: .gitignore  Makefile  README.md  meson.build
.github/workflows/: main.yml
src/: main.c  meson.build  multiplier.c  multiplier.h  time.c  time.h  usage.c  usage.h
tests/: get_mul.c  get_time.c  main.c  meson.build
tools/: c.sh
